*Empty MediaWiki Message*

--- a/ЛопаПарцун:Ярмак.mw
+++ b/ЛопаПарцун:Ярмак.mw
@@ -16,8 +16,8 @@
 {{!-}}
 {{!}} colspan="2" style="background-color:#ffffff; text-align: center;" {{!}}
     {{{!}} width="100%" style="margin: 0 auto; text-align: center;"
-    {{!}} style="vertical-align: middle; text-align: center; {{#if: {{{Фон_изображения|}}} | background: {{{Фон_изображения}}}; }}" {{!}} [[Файл:{{{Артовкс}}}|{{#if: {{{Ширина изображения|}}}|{{{Ширина изображения}}}px|{{#if: {{{Артовкс2|}}}|150px|300px }} }}|{{{Артовксонть эйстэ|}}}]]
-    {{#if: {{{Артовкс2|}}} | {{!}} style="vertical-align: middle; text-align: center; {{#if: {{{Фон_изображения2|}}}|background: {{{Фон_изображения2}}}; }}" {{!}} [[Файл:{{{Артовкс2}}}|{{#if: {{{Ширина изображения2|}}}|{{{Ширина изображения2}}}px|150px }}|{{{Артовксонть эйстэ2|}}}]] }}
+    {{!}} style="vertical-align: middle; text-align: center; {{#if: {{{Фон_изображения|}}} | background: {{{Фон_изображения}}}; }}" {{!}} [[Артовкс:{{{Артовкс}}}|{{#if: {{{Артовксонть покшолмазо|}}}|{{{Артовксонть покшолмазо}}}px|{{#if: {{{Артовкс2|}}}|150px|300px }} }}|{{{Артовксонть эйстэ|}}}]]
+    {{#if: {{{Артовкс2|}}} | {{!}} style="vertical-align: middle; text-align: center; {{#if: {{{Фон_изображения2|}}}|background: {{{Фон_изображения2}}}; }}" {{!}} [[Артовкс:{{{Артовкс2}}}|{{#if: {{{Артовксонть покшолмазо2|}}}|{{{Артовксонть покшолмазо2}}}px|150px }}|{{{Артовксонть эйстэ2|}}}]] }}
     {{!-}} style="font-size: 90%;"
     {{#if: {{{Общая подпись|}}} | {{!}}colspan="2" style="background-color:#ffffff; text-align: center;"{{!}} {{{Общая подпись}}}|
     {{#if: {{{Артовксонть эйстэ|}}} | {{!}} {{{Артовксонть эйстэ|}}} }}
