*Empty MediaWiki Message*

--- a/ЛопаПарцун:Ярмак%2Fdoc.mw
+++ b/ЛопаПарцун:Ярмак%2Fdoc.mw
@@ -12,12 +12,12 @@
  |ISO-fr                = <!-- Наименование валюты на французском языке в соответствии со стандартом ISO 4217 -->
  |Артовкс           = <!-- Имя файла 1 -->
  |Артовкс2          = <!-- Имя файла 2 -->
- |Общая подпись         = <!-- Общая подпись к двум изображениям, если нет необходимости подписывать их по-отдельности -->
- |Артовксонть эйстэ               = <!-- Артовксонть эйстэ для первого изображения; не выводится, если заполнено поле "Общая подпись" -->
- |Артовксонть эйстэ2              = <!-- Артовксонть эйстэ для второго изображения; не выводится, если заполнено поле "Общая подпись" -->
- |Ширина                = <!-- Ширина шаблона; по умолчанию 350px, но не меньше суммарной ширины изображений; вводится без указания единиц измерения -->
- |Ширина изображения    = <!-- Ширина первого изображения; по умолчанию — 300px (при двух изображениях — 150px); вводится без указания единиц измерения -->
- |Ширина изображения2   = <!-- Ширина второго изображения; по умолчанию 150px; вводится без указания единиц измерения -->
+ |Весень артовксонь эйстэ         = <!-- Весень артовксонь эйстэ к двум изображениям, если нет необходимости подписывать их по-отдельности -->
+ |Артовксонть эйстэ               = <!-- Артовксонть эйстэ для первого изображения; не выводится, если заполнено поле "Весень артовксонь эйстэ" -->
+ |Артовксонть эйстэ2              = <!-- Артовксонть эйстэ для второго изображения; не выводится, если заполнено поле "Весень артовксонь эйстэ" -->
+ |ЛопаПарцун покшолмазо                = <!-- ЛопаПарцун покшолмазо; по умолчанию 350px, но не меньше суммарной ширины изображений; вводится без указания единиц измерения -->
+ |Артовксонть покшолмазо    = <!--  покшолмазо первого изображения; по умолчанию — 300px (при двух изображениях — 150px); вводится без указания единиц измерения -->
+ |Артовксонть покшолмазо2   = <!-- покшолмазо второго изображения; по умолчанию 150px; вводится без указания единиц измерения -->
  |ISO                   = <!-- Буквенный код ISO 4217 -->
  |ISO цифровой          = <!-- Цифровой код ISO 4217 -->
  |ISO2                  = <!-- Второй буквенный код ISO 4217; не выводится (включён для совместимости с шаблоном "Валюта историческая" -->
@@ -97,7 +97,7 @@
  |ISO-en                = Euro
  |Артовкс           = 500_Euro.Recto.png
  |Артовкс2          =
- |Общая подпись         = Банкноты и монеты
+ |Весень артовксонь эйстэ         = Банкноты и монеты
  |ISO                   = EUR
  |Эмитент               = [[Европейский союз]]
  |Неоф_пользователи     = {{Флагификация|Республика Косово}}<ref group="a">Частично признанное государство</ref>
@@ -127,7 +127,7 @@
  |ISO-en                = Euro
  |Артовкс           = 500_Euro.Recto.png
  |Артовкс2          =
- |Общая подпись         = Банкноты и монеты
+ |Весень артовксонь эйстэ         = Банкноты и монеты
  |ISO                   = EUR
  |Эмитент               = [[Европейский союз]]
  |Неоф_пользователи     = {{Флагификация|Республика Косово}}<ref group="a">Частично признанное государство</ref>
