--- a/ЛопаПарцун:Ярмак%2Fdoc.mw
+++ b/ЛопаПарцун:Ярмак%2Fdoc.mw
@@ -228,12 +228,12 @@
 |Пример{{ref-ru}}
 |-
 |{{t|Масторкоцт}}
-|<nowiki>{{Масторкоцт|Россиянь Мастор}}</nowiki>
-|{{Масторкоцт|Россиянь Мастор}}
+|<nowiki>{{Масторкоцт|Россия}}</nowiki>
+|{{Масторкоцт|Россия}}
 |-
 |{{t|Коцт}}
-|<nowiki>{{Коцт|Россиянь Мастор}} [[Россиянь Мастор]]</nowiki>
-|{{Коцт|Россиянь Мастор}} [[Россиянь Мастор]]
+|<nowiki>{{Коцт|Россия}} [[Россиянь Мастор]]</nowiki>
+|{{Коцт|Россия}} [[Россиянь Мастор]]
 |-
 |{{t|Знак валюты}}
 |<nowiki>{{Знак валюты|RUB}} или {{Знак валюты|RUB|all|sep=&nbsp;•}}</nowiki>
