--- a/Евро.mw
+++ b/Евро.mw
@@ -1,3 +1,26 @@
+{{Ярмак
+ |Лем                  = Евро
+ |Эсьлем               = Ευρώ
+ |Код языка             = el
+ |ISO-en                = Euro
+ |Артовкс           = 500_Euro.Recto.png
+ |Артовкс2          =
+ |Весень артовксонь эйстэ         = Банкноты и монеты
+ |ISO                   = EUR
+ |Эмитент               = [[Европейский союз]]
+ |Неоф_пользователи     = {{Масторкоцт|Республика Косово}}<ref group="a">Частично признанное государство</ref>
+ |Состоит1              = [[Евроцент]]
+ |Соотношение1          = 100
+ |Ярмаконь тешкс        = {{Знак валюты|EUR|all|sep= •}}
+ |Монеты                = 1, 2, 5, 10, 20, 50 cent, €1, €2
+ |Банкноты              = €5, €10, €20, €50, €100, €200, €500
+ |Центробанк            = [[Европейский центральный банк]]
+ |Центробанк_сайт       = ecb.eu
+ |Википурнавкс          = Euro
+ |Инфляция              = 10%
+ |Год                   = 2013
+ |ГруппаСносок          = a
+}}
 [[File:Euro Construction.svg|thumb|150px]]
 '''Е́врось''' (ярмаконь тешкс — €, банконь кодось: EUR) — эсьлемпелень ярмак 19 масторсо, конат совавтозь «евромежас» ([[Австрия Мастор|Австрия]], [[Бельгия Мастор|Бельгия]], [[Германия Мастор|Германия]], [[Греция Мастор|Греция]], [[Ирландия Мастор|Ирландия]], [[Испания Мастор|Испания]], [[Италия Мастор|Италия]], [[Кипр Республикась|Кипр]], [[Латвия Мастор|Латвия]], [[Литва Мастор|Литва]], [[Люксембург Мастор|Люксембург]], [[Мальта Мастор|Мальта]], [[Нидерланды Мастор|Нидерланды]], [[Португалия Мастор|Португалия]], [[Словакия Мастор|Словакия]], [[Словения Мастор|Словения]], [[Суоми Мастор|Суоми]], [[Франция Мастор|Франция]], [[Эстэнь Мастор|Эстония]])
 
