*Empty MediaWiki Message*

--- a/ЛопаПарцун:Ярмак%2Fdoc.mw
+++ b/ЛопаПарцун:Ярмак%2Fdoc.mw
@@ -247,9 +247,9 @@
 |<nowiki>{{Ярмаконь курс|RUB|USD}} или {{Ярмаконь курс|RUB|USD|10}}</nowiki>
 |{{Ярмаконь курс|RUB|USD}} или {{Ярмаконь курс|RUB|USD|10}} (произведено умножение на 10)
 |-
-|{{t|Дробь}}
-|<nowiki>{{Дробь|100}}, {{Дробь|2|3}} или {{Дробь|1|1|2}}</nowiki>
-|{{Дробь|100}}, {{Дробь|2|3}} или {{Дробь|1|1|2}}
+|{{t|Явовкс}}
+|<nowiki>{{Явовкс|100}}, {{Явовкс|2|3}} или {{Явовкс|1|1|2}}</nowiki>
+|{{Явовкс|100}}, {{Явовкс|2|3}} или {{Явовкс|1|1|2}}
 |-
 |{{t|nobr}}
 |<nowiki>{{nobr|Очень длинная фраза}}</nowiki>
