*Empty MediaWiki Message*

--- a/Евро.mw
+++ b/Евро.mw
@@ -22,7 +22,7 @@
  |ГруппаСносок          = a
 }}
 [[File:Euro Construction.svg|thumb|150px]]
-'''Е́врось''' (ярмаконь тешкс — €, банконь кодось: EUR) — эсьлемпелень ярмак 19 масторсо, конат совавтозь «евромежас» ([[Австрия Мастор|Австрия]], [[Бельгия Мастор|Бельгия]], [[Германия Мастор|Германия]], [[Греция Мастор|Греция]], [[Ирландия Мастор|Ирландия]], [[Испания Мастор|Испания]], [[Италия Мастор|Италия]], [[Кипр Республикась|Кипр]], [[Латвия Мастор|Латвия]], [[Литва Мастор|Литва]], [[Люксембург Мастор|Люксембург]], [[Мальта Мастор|Мальта]], [[Нидерланды Мастор|Нидерланды]], [[Португалия Мастор|Португалия]], [[Словакия Мастор|Словакия]], [[Словения Мастор|Словения]], [[Суоми Мастор|Суоми]], [[Франция Мастор|Франция]], [[Эстэнь Мастор|Эстония]])
+'''Е́вро''' (ярмаконь тешкс — €, банконь кодось: EUR) — эсьлемпелень ярмак 19 масторсо, конат совавтозь «евромежас» ([[Австрия Мастор|Австрия]], [[Бельгия Мастор|Бельгия]], [[Германия Мастор|Германия]], [[Греция Мастор|Греция]], [[Ирландия Мастор|Ирландия]], [[Испания Мастор|Испания]], [[Италия Мастор|Италия]], [[Кипр Республикась|Кипр]], [[Латвия Мастор|Латвия]], [[Литва Мастор|Литва]], [[Люксембург Мастор|Люксембург]], [[Мальта Мастор|Мальта]], [[Нидерланды Мастор|Нидерланды]], [[Португалия Мастор|Португалия]], [[Словакия Мастор|Словакия]], [[Словения Мастор|Словения]], [[Суоми Мастор|Суоми]], [[Франция Мастор|Франция]], [[Эстэнь Мастор|Эстония]])
 
 
 [[Категория:Ярмакт|Е]]
