*Empty MediaWiki Message*

--- a/ЛопаПарцун:Ярмак%2Fdoc.mw
+++ b/ЛопаПарцун:Ярмак%2Fdoc.mw
@@ -100,14 +100,14 @@
  |Весень артовксонь эйстэ         = Банкноты и монеты
  |ISO                   = EUR
  |Эмитент               = [[Европейский союз]]
- |Неоф_пользователи     = {{Флагификация|Республика Косово}}<ref group="a">Частично признанное государство</ref>
+ |Неоф_пользователи     = {{Масторкоцт|Республика Косово}}<ref group="a">Частично признанное государство</ref>
  |Состоит1              = [[Евроцент]]
  |Соотношение1          = 100
  |Ярмаконь тешкс                = €
  |Монеты                = 1, 2, 5, 10, 20, 50 cent, €1, €2
  |Банкноты              = €5, €10, €20, €50, €100, €200, €500
- |Курс1                 = {{Валютный курс|EUR|RUB|1000}}
- |Курс2                 = {{Валютный курс|EUR|USD|100}}
+ |Курс1                 = {{Ярмаконь курс|EUR|RUB|1000}}
+ |Курс2                 = {{Ярмаконь курс|EUR|USD|100}}
  |Валюта1               = 1000 [[Российский рубль|RUB]]
  |Валюта2               = 100 [[Доллар США|USD]]
  |Дата                  = {{Валютный курс|EUR|Дата}}
@@ -136,8 +136,8 @@
  |Ярмаконь тешкс                = {{Знак валюты|EUR|all|sep=&nbsp;•}}
  |Монеты                = 1, 2, 5, 10, 20, 50 cent, €1, €2
  |Банкноты              = €5, €10, €20, €50, €100, €200, €500
- |Курс1                 = {{Валютный курс|EUR|RUB|1000}}
- |Курс2                 = {{Валютный курс|EUR|USD|100}}
+ |Курс1                 = {{Ярмаконь курс|EUR|RUB|1000}}
+ |Курс2                 = {{Ярмаконь курс|EUR|USD|100}}
  |Валюта1               = 1000 [[Российский рубль|RUB]]
  |Валюта2               = 100 [[Доллар США|USD]]
  |Дата                  = {{Валютный курс|EUR|Дата}}
