([[c:GR|GR]])  [[File:Meremäe valla vapp.gif]] → [[File:Meremäe valla vapp.svg]] GIF → SVG

--- a/Меремяэ_буе.mw
+++ b/Меремяэ_буе.mw
@@ -3,7 +3,7 @@
  | Цвет1                          = {{Цвет|Эстэнь Мастор}}
  | Эрзянь лем                     =  Меремяэ буе
  | Эсьлем                         = Meremäe vald
- | Герб                           = Meremäe valla vapp.gif
+ | Герб                           = Meremäe valla vapp.svg
  | Коцт                           = Meremäe valla lipp.gif
  | Гимн                           = 
  | Мастор                         = [[Эстэнь Мастор]]
