([[c:GR|GR]])  [[File:Meremäe valla vapp.gif]] → [[File:Meremäe valla vapp.svg]] GIF → SVG

--- a/ЛопаПарцун:Меремяэнь_вельтне.mw
+++ b/ЛопаПарцун:Меремяэнь_вельтне.mw
@@ -2,7 +2,7 @@
 |лем  = Меремяэнь вельтне
 |заглавие = Меремяэнь вельтне
 |state = collapsed
-|изображение = [[Артовкс:Meremäe valla vapp.gif|50px]]
+|изображение = [[Артовкс:Meremäe valla vapp.svg|50px]]
 |тюс = {{цвет|Эстэнь Мастор}}
 |содержание = [[Ала-Тсумба (Меремяэ буе)|Ала-Тсумба]]
 {{•}}  [[Анткрува (Меремяэ буе)|Анткрува]]
