*Empty MediaWiki Message*

--- a/ЛопаПарцун:Ярмаконь_курс.mw
+++ b/ЛопаПарцун:Ярмаконь_курс.mw
@@ -1,4 +1,4 @@
-<includeonly>{{#if: {{Ярмаконь курс/Фиксированные курсы|{{{1}}}}}| {{#if: {{Ярмаконь курс/Фиксированные курсы|{{{2}}}}} | {{#ifeq: {{{2|}}} | Дата | {{#time: [[j xg]] [[Y]] | {{Ярмаконь курс/Данные|Дата}} }} | {{formatnum:
+<includeonly>{{#if: {{Ярмаконь курс/Фиксированные курсы|{{{1}}}}}| {{#if: {{Ярмаконь курс/Фиксированные курсы|{{{2}}}}} | {{#ifeq: {{{2|}}} | Дата | {{#time: [[j xg]] [[Y]] | {{Ярмаконь курс/Содавкст|Дата}} }} | {{formatnum:
   {{Sigfig
     | {{#expr:
         {{Ярмаконь курс/Фиксированные курсы|{{{1}}}}} / {{Ярмаконь курс/Фиксированные курсы|{{{2}}}}} * {{{3|1}}}
