*Empty MediaWiki Message*

--- a/ЛопаПарцун:Ярмаконь_курс%2FСодавкст.mw
+++ b/ЛопаПарцун:Ярмаконь_курс%2FСодавкст.mw
@@ -1,11 +1,11 @@
 {{#ifeq: {{{1|}}} | Дата | 
-  {{Ярмаконь курс/Данные МВФ|Дата}} |
-{{#if:     {{Ярмаконь курс/Данные МВФ  |{{{1|}}}}} |
-  {{#expr: {{Ярмаконь курс/Данные МВФ  |{{{1|}}}}} / {{Ярмаконь курс/Данные МВФ|EUR}} }} |
-{{#if:     {{Ярмаконь курс/Данные ЦБ РФ|{{{1|}}}}} | 
-  {{#expr: {{Ярмаконь курс/Данные ЦБ РФ|EUR}} / {{Ярмаконь курс/Данные ЦБ РФ|{{{1|}}}}} }} |
-{{#if:     {{Ярмаконь курс/Данные ЕЦБ  |{{{1|}}}}} | 
-  {{#expr: {{Ярмаконь курс/Данные ЕЦБ  |{{{1|}}}}} / {{Ярмаконь курс/Данные ЕЦБ|EUR}} }} |
+  {{Ярмаконь курс/МВФ содавкст|Дата}} |
+{{#if:     {{Ярмаконь курс/МВФ содавкст |{{{1|}}}}} |
+  {{#expr: {{Ярмаконь курс/МВФ содавкст  |{{{1|}}}}} / {{Ярмаконь курс/МВФ содавкст|EUR}} }} |
+{{#if:     {{Ярмаконь курс/КБРФ содавкст|{{{1|}}}}} | 
+  {{#expr: {{Ярмаконь курс/КБРФ содавкст|EUR}} / {{Ярмаконь курс/КБРФ содавкст|{{{1|}}}}} }} |
+{{#if:     {{Ярмаконь курс/ЕКБ содавкст  |{{{1|}}}}} | 
+  {{#expr: {{Ярмаконь курс/ЕКБ содавкст  |{{{1|}}}}} / {{Ярмаконь курс/ЕКБ содавкст|EUR}} }} |
 }} }} }} }}
 
 <noinclude>{{doc}}</noinclude>
