*Empty MediaWiki Message*

--- a/Цяпор_тикше.mw
+++ b/Цяпор_тикше.mw
@@ -1,19 +1,71 @@
-[[Image:Thymus_vulgaris_fragrantissimus1.jpg|thumb|right|250px|Цяпор тикше ''Thymus vulgaris fragrantissimus'']]
-'''Ця́пор ти́кше''' ({{lang-la|Thymus}}, {{lang-ru|чабрец, тимьян}}) — кстыень буесь, яснотковонь семиястонть (али турвацецянь), лопанзо эйсте саить лезе кода каявкс пидемасонть. 
+{{Таксономиясь
+|name =Цяпор тикше
+|latin = Thymus
+|image file =Thymus_vulgaris_fragrantissimus1.jpg
+|image descr = Цяпор тикше (''Thymus vulgaris fragrantissimus'')
+|superregnum =
+|subregnum = 
+|раздел =
+|superphylum =
+|phylum = 
+|subphylum =
+|superdivisio =
+|divisio =
+|subdivisio = 
+|superclassis =
+|classis = 
+|subclassis =
+|infraclassis =
+|superordo =
+|ordo = 
+|subordo =
+|infraordo =
+|superfamilia =
+|familia = 
+|subfamilia =
+|tribus =
+|genus =
+|subgenus =
+|species =
+|subspecies =
+|unranked =
+|range map =
+| wikispecies       = Thymus
+| commons           =
+| iucn              = 
+| itis              = 
+| ncbi              = 
+| eol               = 37601
+| grin             = 484
+| ipni              = 1127-1
+}}
 
-Цяпор тикшесь — пелькуро чувтовикс нетькс марто (сеетьстэ мадезь аштиця) ды тикшев тарад марто 
+'''Ця́пор ти́кше<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>''' ({{lang-la|Thymus}}, саеви {{lang-grc|Θύμος эли Θύμον}} валтнестэ; {{lang-ru|чабрец, тимьян}}) — кстыень буесь, яснотковонь семиястонть (''Lamiaceae'') (эли турвацецянь), лопанзо эйсте саить лезе кода каявкс пидемасонть. 
+
+Цяпор тикшесь — пелькуро чувтовикс нетькс марто (сеетьстэ мадезь аштиця) ды тикшев тарад марто. 
 
 Лопанзо супротивнойть, вишкат.
 
 Цецянзо цецянькуросонть покшовикс [[Валдо-сэнь|валдо-сэньть]]. 
 
-Веси кстыесь виевсте тантей чинев, пряной лембе чине марто.
-
+Веси кстыесь виевсте тантей чинев, пряной лембе чине марто. Мекшне саить медярво.
 
 [[Image:Thymus serpyllum flowering plants.jpg|thumb|right|250px|Цяпор тикшесь цецямо шкасто]]
 
 
+== Тикшень лемтне ==
+* ({{Lang-lat|Thymus serpyllum L.}}, {{lang-ru| ''Тимьян ползучий эли Богородская трава''}})  - '''''ацавиця цяпортикше'''''<ref name="Русско-эрзянский ботанический"/>. 
 
+== Содамоёвкст ==
+== Фотокувт ==
+
+== Лисьм.: ==
+<references />
+
+
+[[Категория:Биология|Ц]]
+[[Категория:Тикшеть|Ц]]
+[[Категория:Медярво максыйть|Ц]]
 
 
 
