*Empty MediaWiki Message*

--- a/Псакалапа.mw
+++ b/Псакалапа.mw
@@ -40,7 +40,7 @@
 | ipni              = 
 }}
 
-'''Псакалапа<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>''' ({{lang-la|Helichrýsum}}, {{lang-ru|цмин<ref name="Шрётер">Шрётер А. И., Панасюк В. А. Словарь названий растений = Dictionary of Plant Names / Межд. союз биол. наук, Нац. к-т биологов России, Всерос. ин-т лек. и ароматич. растений Рос. сельскохоз. академии; Под ред. проф. В. А. Быкова. — Koenigstein: Koeltz Scientific Books, 1999. — С. 353. — 1033 с. — ISBN 3-87429-398-X.{{ref-ru}}</ref><ref name="Энциклопедический словарь Брокгауза_Златоцвет">[https://ru.wikisource.org/wiki/ЭСБЕ/Златоцвет Златоцвет // Энциклопедический словарь Брокгауза и Ефрона : в 86 т. (82 т. и 4 доп.). — СПб., 1890—1907.]{{ref-ru}}</ref>, гелихризум, бессме́ртник<ref name="Шрётер"/>, златоцвет<ref name="Энциклопедический словарь Брокгауза_Златоцвет"/>, иммортель<ref name="Энциклопедический словарь Брокгауза_Златоцвет"/> эли желтянка<ref name="Энциклопедический словарь Брокгауза_Желтянка">[https://ru.wikisource.org/wiki/ЭСБЕ/Желтянка  Желтянка // Энциклопедический словарь Брокгауза и Ефрона : в 86 т. (82 т. и 4 доп.). — СПб., 1890—1907.]{{ref-ru}}</ref>}}) — ламо-, вейке иень тикше, пелькуракш ды куракш Астрань семиястонть (''Asteraceae''). 
+'''Псакалапа<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>''' ({{lang-la|Helichrýsum}}, {{lang-ru|цмин<ref name="Шрётер">Шрётер А. И., Панасюк В. А. Словарь названий растений = Dictionary of Plant Names / Межд. союз биол. наук, Нац. к-т биологов России, Всерос. ин-т лек. и ароматич. растений Рос. сельскохоз. академии; Под ред. проф. В. А. Быкова. — Koenigstein: Koeltz Scientific Books, 1999. — С. 353. — 1033 с. — ISBN 3-87429-398-X.{{ref-ru}}</ref><ref name="Энциклопедический словарь Брокгауза_Златоцвет">[https://ru.wikisource.org/wiki/ЭСБЕ/Златоцвет Златоцвет // Энциклопедический словарь Брокгауза и Ефрона : в 86 т. (82 т. и 4 доп.). — СПб., 1890—1907.]{{ref-ru}}</ref>, гелихризум, бессме́ртник<ref name="Шрётер"/>, златоцвет<ref name="Энциклопедический словарь Брокгауза_Златоцвет"/>, иммортель<ref name="Энциклопедический словарь Брокгауза_Златоцвет"/> эли желтянка<ref name="Энциклопедический словарь Брокгауза_Желтянка">[https://ru.wikisource.org/wiki/ЭСБЕ/Желтянка  Желтянка // Энциклопедический словарь Брокгауза и Ефрона : в 86 т. (82 т. и 4 доп.). — СПб., 1890—1907.]{{ref-ru}}</ref>}}) — ламо-, вейке иень [[тикше]], пелькуракш ды куракш Астрань семиястонть (''Asteraceae''). 
 
 == Тикшень лемтне ==
 * ({{Lang-lat|Helichrysum arenarium (L.) Moench}}, {{lang-ru| ''Цмин песчаный''}})  - '''''човарлангонь псакалапа'''''<ref name="Русско-эрзянский ботанический"/>. 
