--- a/Евро.mw
+++ b/Евро.mw
@@ -11,7 +11,7 @@
  |Неоф_пользователи     = {{Масторкоцт|Республика Косово}}<ref group="a">Частично признанное государство</ref>
  |Состоит1              = [[Евроцент]]
  |Соотношение1          = 100
- |Ярмаконь тешкс        = {{Знак валюты|EUR|all|sep= •}}
+ |Ярмаконь тешкс        = {{Ярмаконь тешкс|EUR|all|sep= •}}
  |Монеты                = 1, 2, 5, 10, 20, 50 cent, €1, €2
  |Банкноты              = €5, €10, €20, €50, €100, €200, €500
  |Центробанк            = [[Европейский центральный банк]]
