*Empty MediaWiki Message*

--- a/Евро.mw
+++ b/Евро.mw
@@ -5,7 +5,7 @@
  |ISO-en                = Euro
  |Артовкс           = 500_Euro.Recto.png
  |Артовкс2          =
- |Весень артовксонь эйстэ         = Банкноты и монеты
+ |Весень артовксонь эйстэ         = Банкнотат ды монетат
  |ISO                   = EUR
  |Эмитент               = [[Европейский союз]]
  |Неоф_пользователи     = {{Масторкоцт|Республика Косово}}<ref group="a">Частично признанное государство</ref>
@@ -14,7 +14,7 @@
  |Ярмаконь тешкс        = {{Ярмаконь тешкс|EUR|all|sep= •}}
  |Монеты                = 1, 2, 5, 10, 20, 50 cent, €1, €2
  |Банкноты              = €5, €10, €20, €50, €100, €200, €500
- |Центробанк            = [[Европейский центральный банк]]
+ |Центробанк            = [[Европань куншка банк]]
  |Центробанк_сайт       = ecb.eu
  |Википурнавкс          = Euro
  |Инфляция              = 10%
