*Empty MediaWiki Message*

--- a/Цяпор_тикше.mw
+++ b/Цяпор_тикше.mw
@@ -54,7 +54,7 @@
 
 
 == Тикшень лемтне ==
-* ({{Lang-lat|Thymus serpyllum L.}}, {{lang-ru| ''Тимьян ползучий эли Богородская трава''}})  - '''''ацавиця цяпортикше'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Thymus serpyllum L.}}, {{lang-ru| ''Тимьян ползучий эли Богородская трава''}})  - '''''[[ацавиця цяпортикше]]'''''<ref name="Русско-эрзянский ботанический"/>. 
 
 == Содамоёвкст ==
 == Фотокувт ==
