--- a/Мокшановонь_Татьяна.mw
+++ b/Мокшановонь_Татьяна.mw
@@ -23,21 +23,27 @@
  |википурнавкс         = 
 }}
 
-'''Мокшановонь Татьяна''' ({{lang-ru|Татьяна Мокшанова}}), ([[1984 ие]] [[якшамковонь 9 чи]]стэ  [[Баганя веле (Шенталань буе)|Баганя велесэ]]) — неень шкань [[Эрзя|эрзянь]] содавикс валморонь ладсий. 
+'''Мокшановонь Татьяна''' ({{lang-ru|Татьяна Петровна Мокшанова}}), ([[1984 ие]] [[якшамковонь 9 чи]]стэ  [[Баганя веле (Шенталань буе)|Баганя велесэ]]) — неень шкань [[Эрзя|эрзянь]] содавикс валморонь ладсий. 
 
 =Эстедензэ=
-Чачсь [[1984 ие]]нь [[якшамковонь 9 чи]]стэ [[Самара ёнкс]]онь [[Шенталань буе Самарань ёнксcо|Шенталань буень]] [[Баганя веле (Шенталань буе)|Баганя велесэ]]. [[2006 ие]]стэ прядызе Н.П. Огарёв лемсэ МГУ-нь филологиянь факультетэнь эрзянь отделениянть. Ней сон суоминь-угрань литературатнень кафедрасо аспирант. Важоди [[«Чилисема» (журнал)|«Чилисема» эйкакшонь ковставксонь-журналонь]] редакторонь полавтыцякс<ref>[http://erziapr.ru/index.php/culture-and-religion/1450-2014-10-30-07-58-35 KУНДЫЗЬ ИНЕ СЁРМАДЕЕНТЬ ЛЕМЕНЗЭ] {{ref-myv}}</ref>. Сёрмады валморот. Мирдень вакссо. Касты кавто пакшинеть - тейтертне ды цёрыне.
+Чачсь [[1984 ие]]нь [[якшамковонь 9 чи]]стэ [[Самара ёнкс]]онь [[Шенталань буе Самарань ёнксcо|Шенталань буень]] [[Баганя веле (Шенталань буе)|Баганя велесэ]]. [[2006 ие]]стэ прядызе Н.П. Огарёв лемсэ МГУ-нь филологиянь факультетэнь эрзянь отделениянть. Ней сон суоминь-угрань литературатнень кафедрасо аспирант. Важоди [[«Чилисема» (журнал)|«Чилисема» эйкакшонь ковставксонь-журналонь]] редакторонь полавтыцякс<ref>[http://erziapr.ru/index.php/culture-and-religion/1450-2014-10-30-07-58-35 KУНДЫЗЬ ИНЕ СЁРМАДЕЕНТЬ ЛЕМЕНЗЭ] {{ref-myv}}</ref>. Сёрмады валморот. Мирдень вакссо. Касты кавто пакшинеть - тейтертне ды цёрыне. 
+Печатавсь «Шенталинские вести», «Слободские куранты», «Округа», [[«Эрзянь Мастор» (кулялопа)|«Эрзянь Мастор»]],«Валдо ойме», [[«Эрзянь правда» (кулялопа)|«Эрзянь правда»]] кулялопатнесэ, [[Сятко (журнал-ковставкс)|«Сятко» ковтставксо-журналсо]]. [[Валморо]]нзо лексить пертьпельксэнь мазычинтень, тиринь келентень, культурантень певтеме вечкемасо. Сёрмадовксонзо мазыйть, эйсэст ламо валдочи, парочи.
 
 == Шкинемазо ==
-* «Эрьгекерькс»<ref>[http://www.erzia.saransk.ru/arhiv.php?n=1483&nom11=237 ОД КНИГАТ. ЛОВНОДО ДЫ ПРЕВИЯДО]{{ref-myv}}, {{ref-ru}}</ref> ({{lang-ru|«Бусы»}}, 2006 ие) 
-* «Толонь лопат»<ref>[http://www.library.saransk.ru/elects/2010/april.php Новые книги Мордовии. Ежемесячный информационный бюллетень (апрель 2010 г.)] {{ref-ru}}</ref> ({{lang-ru|«Огненные листья»}}, 2010 ие).
+Т. Мокшановонь валморонзо совасть «От Урала до Невы» (2001), «Первая капель» (2005), «Монь вайгелем» ({{lang-ru|«Мой голос»}}, 2005), «Литературный сентябрь» (2006), «Эскелькс» ({{lang-ru|«Шаг»}}, 2008), «Эрзянь валске» ({{lang-ru|«Эрзянское утро»}}, 2011), «Тешкс» ({{lang-ru|«Знак»}}, 2014) вейсэнь пусмотнес. Сёрмады эсензэ ладсо, седейшкава, виевстэ. Секс 2006-це иестэ Мокшанова Татьянанень максозель од сёрмадыцятнень туртов Мордовия Республикань прявтонь литературань премиясь.
+* «Эрьгекерькс»<ref>[http://www.erzia.saransk.ru/arhiv.php?n=1483&nom11=237 ОД КНИГАТ. ЛОВНОДО ДЫ ПРЕВИЯДО]{{ref-myv}}, {{ref-ru}}</ref> ({{lang-ru|«Бусы»}}, Саран ош, 2006 ие) 
+* «Толонь лопат»<ref>[http://www.library.saransk.ru/elects/2010/april.php Новые книги Мордовии. Ежемесячный информационный бюллетень (апрель 2010 г.)] {{ref-ru}}</ref> ({{lang-ru|«Огненные листья»}}, Саран ош, 2010 ие).
 
+Неть валморонь пусмотнень кис авторось саезель [[2014 ие]]стэ Россиянь Сёрмадеень вейсэндявксос.
+ 
 Татьяна Мокшанова - Мордовия Республикань Прявтонь од сёрмадыцятнень туртов литературной премиянь лауреат ([[2010 ие]]), [[Саран ош]]онь Литераторонь союзонь член (2006 ие).
+Покш мельсэ Татьяна Петровна топавты лия кельстэ ютавтомань тевентькак. Ютавтовксонзо вельде [[эрзят|эрзянь]] ловныцясь теевсь содавиксэкс [[комить|коминь]], [[удмуртт|удмуртонь]], [[марить|маринь]], [[мокшот|мокшонь]], [[рузт|рузонь]], [[мадьярт|венгрань]], [[украинецт|украинэнь]] сёрмадыцятнэнь валморонь шкинеманть марто.
+Ней варчни виензэ прозасояк.
 
 == Ванмот==
 * [http://www.youtube.com/watch?v=MWTJm-UWwH8 Татьяна Мокшанова (Од пинге) {{ref-myv}}]
-* [http://www.youtube.com/watch?v=yQZL4zu-rOw Татьяна Мокшанова ловны Числав Журавлевонь стихензэ {{ref-myv}}]
-== Сёрм. ==
+* [http://www.youtube.com/watch?v=yQZL4zu-rOw Татьяна Мокшанова ловны Числав Журавлевонь валморонзо {{ref-myv}}]
+== Лисьм. ==
 <references />
 
 
