--- a/ЛопаПарцун:Lang-pt.mw
+++ b/ЛопаПарцун:Lang-pt.mw
@@ -1,1 +1,1 @@
-[[португалень кель|порт.]] ''<span lang="pt">{{{1}}}</span>''<noinclude>{{doc|Lang/doc}} </noinclude>
+[[португалонь кель|порт.]] ''<span lang="pt">{{{1}}}</span>''<noinclude>{{doc|Lang/doc}} </noinclude>
