*Empty MediaWiki Message*

--- a/1855_ие.mw
+++ b/1855_ие.mw
@@ -4,7 +4,7 @@
 == Мезе ульнесь те иестенть ==
 
 == Чачсть ==
-* 21 [[даволков]]онь — [[Юртов Авксентий]], [[Эрзянь кель|эрзянь кельсэ]] васенце букварень нолдыцязо.
+* [[даволковонь 21 чи]]стэ — [[Юртов Авксентий]], [[Эрзянь кель|эрзянь кельсэ]] васенце букварень нолдыцязо.
 
 == Кулость ==
 
