--- a/Казань_ош.mw
+++ b/Казань_ош.mw
@@ -1,3 +1,63 @@
+{{ЭТ
+ |статус                  = ош
+ |Эрзянь лем              = Казань
+ |оригинальное название   = {{lang-ru|Казань}}<br /> {{lang-tt|Казан, Qazan}}
+ |изображение             = 
+ |подчинение              = 
+ |мастор                  = 
+ |герб                    = 
+ |коцт                    = 
+ |описание герба          = 
+ |описание флага          = 
+ |ширина герба            = 
+ |ширина флага            = 
+  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
+  |CoordAddon             = 
+  |CoordScale             = 
+ |размер карты страны     = 
+ |размер карты региона    = 
+ |размер карты района     = 
+ |вид региона             = 
+ |регион                  = 
+ |регион в таблице        = 
+ |вид района              = 
+ |район                   = 
+ |район в таблице         = 
+ |вид общины              = 
+ |община                  = 
+ |община в таблице        = 
+ |внутреннее деление      = 
+ |вид главы               = 
+ |глава                   = 
+ |дата основания          = 
+ |первое упоминание       = 
+ |прежние имена           = 
+ |статус с                = 
+ |покшолмазо              = 
+ |вид высоты              = 
+ |высота центра ЭТ        = 
+ |климат                  = 
+ |официальный язык        = 
+  |эрицятне               = 
+  |год переписи           = 
+  |плотность              = 
+  |агломерация            = 
+  |национальный состав    = 
+  |конфессиональный состав= 
+  |этнохороним            = 
+ |шкань каркс             = 
+ |DST                     = 
+ |кортавксонь код         = 
+ |почтовый индекс         = 
+ |почтовые индексы        = 
+ |автомобильный код       = 
+ |вид идентификатора      = 
+ |цифровой идентификатор  = 
+ |категория в Commons     = 
+ |сайт                    = 
+ |язык сайта              = 
+}}
 '''Казань ош''' ({{lang-ru|Казань}}, {{lang-tt|Казан, Qazan}}) — прявтош [[Печкасонь Республикась|Татаронь Республиканть]], ашти [[Россия Мастор|Россия Масторсо]].
 
 == Валмеревкст ==
