*Empty MediaWiki Message*

--- a/Италия_Мастор.mw
+++ b/Италия_Мастор.mw
@@ -1,7 +1,4 @@
-{|align="right"
-|-
-|
-{{Мастор
+{{Мастор2
  |Эрзянь лем=Италиянь Мастор
  |Оригинальное название=Repubblica Italiana
  |Родительный падеж=Италиянь
