*Empty MediaWiki Message*

--- a/Италия_Мастор.mw
+++ b/Италия_Мастор.mw
@@ -18,8 +18,8 @@
  |Покшолмазо=301 340 (усиятьнень марто 309 547)
  |Веденть процентэсь=2,4
  |Таркась эрицятнева=23
- |Эрицятне=61 482 297
- |Ловнома иесь=2013
+ |Эрицятне=
+ |Раськень сёрмацтомась иесь = 
  |Ломантнень плотностесь= 201,1
  |ПВП=
  |ПВП-нь ловнома иесь=
@@ -32,9 +32,7 @@
  |Часовой каркс=+1&nbsp; кизна+2
  |Примечания=<references/>
 }}
-|-
-| 
-|}
+
 '''Италия''' ( официальнойсте мерить  {{lang-ru|Италья́нская Респу́блика}}, {{lang-it|Repubblica Italiana}}) — мастор [[Европань Мастор|Европань]] Лембеёнксо, [[Куншкамасторонь иневедь]] таркасонть.
 
 Шабрацек ашти [[Франция Мастор|Франция]]  марто пелеве-чивалгомасо (межанть кувалмозо — 488 вп), [[Швейцария Мастор|Швейцариянь]] (740 вп) ды пелевеёнксо [[Австрия Мастор|Австриянь]] марто (430 вп). [[Словения Мастор|Словения]] марто пелеве-чивалгомань ёнксо (232 вп). Истяжо улить потмомежат [[Ватикан]] матро (3,2 вп) лы [[Сан-Марино]] (39 вп).
