*Empty MediaWiki Message*

--- a/Скопье_ош.mw
+++ b/Скопье_ош.mw
@@ -29,8 +29,8 @@
  |община в таблице        = 
  |внутреннее деление      = 
  |вид главы               = 
- |глава                   = мэр
- |дата основания          = Ксавье Беттель
+ |глава                   = 
+ |дата основания          = К
  |первое упоминание       = 
  |прежние имена           = Скупи, Ускюб, Скопле
  |статус с                = 
@@ -39,7 +39,7 @@
  |высота центра ЭТ        =
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               =  670 000
+  |эрицятне               = 
   |год переписи           = 
   |плотность              = 
   |агломерация            = 
