*Empty MediaWiki Message*

--- a/Скопье_ош.mw
+++ b/Скопье_ош.mw
@@ -21,16 +21,16 @@
  |вид региона             = 
  |регион                  = 
  |регион в таблице        = 
- |вид района              = кантон
- |район                   = Люксембург
- |район в таблице         = Люксембург
+ |вид района              =
+ |район                   = 
+ |район в таблице         = 
  |вид общины              = 
  |община                  = 
  |община в таблице        = 
  |внутреннее деление      = 
  |вид главы               = 
  |глава                   = 
- |дата основания          = К
+ |дата основания          = 
  |первое упоминание       = 
  |прежние имена           = Скупи, Ускюб, Скопле
  |статус с                = 
