*Empty MediaWiki Message*

--- a/Рамонень_буе_(Воронежень_ёнкс).mw
+++ b/Рамонень_буе_(Воронежень_ёнкс).mw
@@ -24,7 +24,7 @@
   |Название главы                 = Администрациянь прявт
  |Глава2                          = Виктор Иванович Логвинов
   |Название главы2                = Буень прявт
- | Карта                          = Location of Pavlovsky District (Voronezh Oblast).svg
+ | Карта                          = Location of Ramonsky District (Voronezh Oblast).svg
  | Размер карты                   = 
  | Карта административной единицы = 
  | Размер карты ае                = 
