*Empty MediaWiki Message*

--- a/Германия_Мастор.mw
+++ b/Германия_Мастор.mw
@@ -1,7 +1,4 @@
-{|align="right"
-|-
-|
-{{Мастор
+{{Мастор2
  |Эрзянь лем=Германия Мастор
  |Оригинальное название=Bundesrepublik Deutschland
  |Родительный падеж=Германиянь
@@ -35,9 +32,6 @@
  |Часовой каркс=+1&nbsp;
  |Примечания=<references/>
 }}
-|-
-| 
-|}
 '''Герма́ния''' (Герма́ниянь Федеративной Респу́бликась, {{lang-de|Bundesrepublik Deutschland}}) — мастор Чивалгомань [[Европань Мастор|Европасо]]. 
 
 {{Европань мастортнэ}}
