*Empty MediaWiki Message*

--- a/Германия_Мастор.mw
+++ b/Германия_Мастор.mw
@@ -17,9 +17,9 @@
  |Таркась модаванть=61
  |Покшолмазо=357 022
  |Веденть процентэсь=2,18
- |Таркась эрицятнева=13
- |Эрицятне=82 310 000
- |Ловнома иесь=2006
+ |Таркась эрицятнева= 
+ |Эрицятне= 
+ |Раськень сёрмацтомась иесь = 
  |Ломантнень плотностесь=231
  |ПВП=2 609 000 млн
  |ПВП-нь ловнома иесь=2006
