*Empty MediaWiki Message*

--- a/Мокшонь_Баймак_(Оразайбуе).mw
+++ b/Мокшонь_Баймак_(Оразайбуе).mw
@@ -1,7 +1,7 @@
 {{ЭТ
  |статус                  = Веле
  |Эрзянь лем              = Мокшонь Баймак
- |оригинальное название   = {{Lang-mdf|Мокшень Баймак веле}}<br /> {{Lang-ru|Мордовское Баймаково}}
+ |оригинальное название   = {{Lang-mdf|Мокшень Баймак}}<br /> {{Lang-ru|Мордовское Баймаково}}
  |изображение             = 
  |подчинение              = 
  |мастор                  = Россия
@@ -58,8 +58,8 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Мокшонь Баймак велесь''' ( {{Lang-mdf|Мокшень Баймак веле}}, {{Lang-ru|Мордовское Баймаково}}) — [[мокшот|мокшонь]] веле [[Мордовия Республикась|Мордовия Республикасонть]].
-Велесь совавтови [[Рузайбуе|Рузайбуеньте]]. Ашти [[Ювня лей]] ланксо.
+'''Мокшонь Баймак''' ( {{Lang-mdf|Мокшень Баймак}}, {{Lang-ru|Мордовское Баймаково}}) — [[мокшот|мокшонь]] веле [[Мордовия Республикась|Мордовия Республикасонть]].
+Велесь совавтови [[Оразайбуе|Оразайбуеньте]]. Ашти [[Ювня лей]] лангсо.
 
 {{stub}}
 
