--- a/Оразайбуе.mw
+++ b/Оразайбуе.mw
@@ -74,11 +74,11 @@
 * [[Дивеевка (Оразайбуе)|Дивеевка]] – ({{Lang-ru|д. Дивеевка}})
 * [[Левож (Оразайбуе)|Левож]] – ({{Lang-ru|c. Левжа}})
 * [[Макаровка (Оразайбуе)|Макаровка]] – ({{Lang-ru|д. Макаровка}})
-* [[Мокшень Баймак (Оразайбуе)|Мокшень Баймак]] – ({{Lang-ru|д. Мордовское Баймаково}})
-* [[Мокшень Куженя (Оразайбуе)|Мокшень Куженя]] – ({{Lang-ru|д. Мордовская Полянка}})
+* [[Мокшонь Баймак (Оразайбуе)|Мокшонь Баймак]] – ({{Lang-ru|д. Мордовское Баймаково}})
+* [[Мокшонь Куженя (Оразайбуе)|Мокшонь Куженя]] – ({{Lang-ru|д. Мордовская Полянка}})
 * [[Мокшонь Пишля (Оразайбуе)|Мокшонь Пишля]] – ({{Lang-ru|c. Мордовская Пишля}})
 * [[Мурай Веле (Оразайбуе)|Мурай Веле]] – (лиякс кортыть: ''Кельме Пора'', {{Lang-ru|c. Новая Муравьевка}})
-* [[Новый Усад (Оразайбуе)|Новый Усад]] – ({{Lang-ru|c. Новый Усад}})
+* [[Од Усад (Оразайбуе)|Од Усад]] – ({{Lang-ru|c. Новый Усад}})
 * [[Oд веле (Оразайбуе)|Oд веле]] – ({{Lang-ru|c. Куликовка}})
 * [[Полай Веле (Оразайбуе)|Полай Веле]] – (лиякс кортыть: ''Цифтомаз'',{{Lang-ru|c. Палаевка}})
 * [[Прхляй (Оразайбуе)|Прхляй]] – (лиякс кортыть: ''Перьфляй'', {{Lang-ru|c. Перхляй}})
@@ -139,7 +139,7 @@
 * [[Яковщина (Оразайбуе)|Яковщина]] – ({{Lang-ru|c. Яковщина}})
 
 човор велеть: 
-* [[Левженский (Оразайбуе)|Левженский]] – ({{Lang-ru|п. Левженский}}) – эрить рузт ды мокшот 
+* [[Левженской (Оразайбуе)|Левженский]] – ({{Lang-ru|п. Левженский}}) – эрить рузт ды мокшот 
 * [[Хованщина (Оразайбуе)|Хованщина]] – ({{Lang-ru|п. Хованщина}}) – эрить мокшот ды рузт
 
 == Сёрм.: ==
