*Empty MediaWiki Message*

--- a/Эрзят.mw
+++ b/Эрзят.mw
@@ -94,9 +94,8 @@
 :Весе раськетненень Вемельксчинь, Сетьмечинь ды Изнявксчинь арсезь Эрзянь Раськень Инекужось.''<ref> Эрзянь Раськень Инекужось, 1995 ие, эйзюрков, 23 чи. Саран Ош.</ref>
 
 == Содавикс эрзятне ==
-* [[Тюштя|Инязор Тюштя]]
-* [[Инязор Пургаз]]
 * [[Абрамовонь, Кузьма Григорьевичесь|Абрамовонь Кузьма]]
+* [[протопоп Аввакум]]<ref name="Водясова Л.П. "/>
 * [[Алексеевень Кузьма]]
 * [[Батаевень, Павел Петрович|Батаевень Павел]]
 * [[Виард, Василий Иванович|Ардеев, Василий Иванович (ВИАРД)]]
@@ -118,8 +117,10 @@
 * [[Люлякинань, Серафима Марковна|Люлякинань Серафима]]
 * [[Моро, Артур|Артур Моро]]
 * [[Надькинень, Дмитрий Тимофеевич|Дмитрий Надькин]]
+* [[патриарх Никон]]<ref name="Водясова Л.П. "> Водясова Л.П. Метафорическое моделирование концепта «религия» в романе  А. М. Доронина «Баягань сулейть» («Тени колоколов»)  // Litera. — 2015. - № 4. - С.9-20. DOI: 10.7256/2409-8698.2015.4.18227. URL: http://e-notabene.ru/fil/article_18227.html {{ref-ru}}, {{ref-myv}}</ref> - (эсь лемесь Никита Минин)
 * [[Нуянь Видяз|Нуянь Видяз (Евгений Четвергов)]]
 * [[Пуркаевень, Максим Алексеевич|Максим Пуркаев]]
+* [[Инязор Пургаз]]
 * [[Рябовонь Анатолий]]
 * [[Рябов, Владимир Павлович|Рябовонь Владимир]]
 * [[Лёша Рав]]
@@ -127,6 +128,7 @@
 * [[Радаевень, Василий Кузьмич|Радаев Василий]]
 * [[Руслановань, Лидия Андреевна|Руслановань Лидия Андреевна]]
 * [[Сафронов, Никас Степанович|Никас Сафронов]]
+* [[Тюштя|Инязор Тюштя]]
 * [[Чапаевень Василий]]
 * [[Чесноковонь, Фёдор Маркелович|Фёдор Чесноков]]
 * [[Чиндяйкинень, Николай Дмитриевич|Николай Чиндяйкин]]
