топавтыять: /Седямо ды морамо шкинемась эрзянь кельсэ/ пельксэнть

--- a/Эрзят.mw
+++ b/Эрзят.mw
@@ -136,7 +136,18 @@
 * [[Никул Эркай]]
 * [[Степан Эрьзя]]
 
-== Сёрм.: ==
+== Седямо ды морамо шкинемась эрзянь кельсэ==
+Сех содавикс суоми-угрань масторга, кие моры эрзякс те [[«Торама» морамо-седямо кужо|Торама]] морамо пурнавксось. [[2005 ие]]стэ ульнесь теезь  арт-фолк группа Морденс, сон содавикс од кунсолыцятнень ютксо. [[2010 ие]]стэ [[Саран ош]]со ушодызе  эсь шкинеманзо [[Мерема морамо-седямо кужо]]сь<ref>[http://www.finnougoria.ru/community/creative/section.php?SECTION_ID=273&ELEMENT_ID=32714 «Мерема», фольклорный ансамбль]{{Ref-ru}}</ref>. 2011 иестэ [[Мосоков]]со васенцеде лись сцена лангс [[«Ойме» морамо-седямо кужо]]сь<ref>[http://www.oymemusic.com Официальный сайт. О группе]{{Ref-ru}}</ref>.
+
+Неень шкань морот [[эрзянь кель]]сэ морыть [[Бакич Видяй]], [[Ежевика Спиркина]], [[Панишень Аня]],  Самаркинэнь Евгений<ref>[http://www.elupuu.org/index.php?id=513 вгений Самаркинынь эсь моросонзо куйсь од тёкшос]{{Ref-myv}}</ref><ref>[http://www.erziapr.ru/index.php/culture-and-religion/1564-2014-12-18-08-38-33 ЧАУНЗАНСЕТНЕ — ВАСЕНЦЕТЬ!]{{Ref-myv}}</ref>, Виктор Рауткин<ref>[http://числав.рф КУЛЯТ. НОВОСТИ. АНОНСЫ]{{Ref-ru}}</ref>, Трифоновонь Максим<ref name="«Erzyaks.ru» Максим Трифонов">[http://erzyaks.ru/maksim-trifonov-ya-xochu-mnogo-russkix-pesen-perevesti-na-erzyanskij-i-spet/ «Erzyaks.ru» Максим Трифонов: «я хочу много русских песен перевести на эрзянский и спеть!»]{{ref-ru}}, {{ref-myv}}</ref>, Бакайкинань Лияна  ды лият.
+
+<gallery widths="220px" heights="160px">
+Mordens.jpg|«Морденс» фолк-арт кужо
+Torama REM 30.05.2009.jpg|«Торама» седямо-морамо кужось ([[2009 ие]]стэ, [[Ине-Петрань ош]]со)
+OYME.IMG 7073.JPG|OYME моры Tallinn Music Week фестивальсэ ([[2015 ие]]стэ)
+Merema folk gruop Obinitca.jpg|Мерема морамо кужось Seto Kuningriigipäevad Покш Чисэнть, [[Обиница (Меремяэ буе)|Обиница]], [[2015 ие]]нь [[умарьковонь 1 чи]]
+</gallery>
+== Лисьм.: ==
 <references />
 
 
