*Empty MediaWiki Message*

--- a/Масторава_(морокерькс).mw
+++ b/Масторава_(морокерькс).mw
@@ -74,4 +74,5 @@
 
 [[Category:Мифология|М]]
 [[Category:Эрзянь сёрмадоматев|М]]
-[[Категория:Википедиясь:Лопат]]
+[[Категория:Википедиясь:Кочказь лопат]]
+ ‎
