*Empty MediaWiki Message*

--- a/Степан_Эрьзя.mw
+++ b/Степан_Эрьзя.mw
@@ -119,4 +119,4 @@ Erzya Leda.jpg|thumb|right|350px|Степан Эрьзянь ''Леда'' тев
 
 [[Категория:Эрзянь Ине ломанть|Э]]
 [[Category:Эрзякс кортыцят|Э]]
-[[Категория:Википедиясь:Лопат]]
+[[Категория:Википедиясь:Кочказь лопат]]
