*Empty MediaWiki Message*

--- a/Калевала.mw
+++ b/Калевала.mw
@@ -375,3 +375,4 @@ tämän iltamme iloksi,<br />
 
 [[Категория:Мифология]]
 [[Категория:Суоми-угрань сёрмадоматев|К]]
+[[Категория:Википедиясь:Кочказь лопат]]
