*Empty MediaWiki Message*

--- a/Евсевьев,_Макар_Евсевьевич.mw
+++ b/Евсевьев,_Макар_Евсевьевич.mw
@@ -195,3 +195,4 @@ Image:Эрзянь ёвкст (М. Е. Евсевьев, 1928).djvu|Эрзянь
 [[Category:Тонавтыцят|Е]]
 [[Category:Эрзянь тонавтыцят|Е]]
 [[Category:Грамматикань сёрмадыйть|Е]]
+[[Категория:Википедиясь:Кочказь лопат]]
