*Empty MediaWiki Message*

--- a/Маризь_Кемаль.mw
+++ b/Маризь_Кемаль.mw
@@ -52,3 +52,4 @@
 [[Category:Эрзянь сёрмадейть|М]]
 [[Category:Эрзякс кортыцят|М]]
 [[Категория:Чачозь умарьковонь 13]]
+[[Категория:Википедиясь:Кочказь лопат]]
