*Empty MediaWiki Message*

--- a/Нуянь_Видяз.mw
+++ b/Нуянь_Видяз.mw
@@ -56,3 +56,4 @@
 [[Category:Эрзянь кель|Н]]
 [[Category:Эрзянь сёрмадейть|Н]]
 [[Category:Эрзякс кортыцят|Н]]
+[[Категория:Википедиясь:Кочказь лопат]]
