*Empty MediaWiki Message*

--- a/Эрзят.mw
+++ b/Эрзят.mw
@@ -153,3 +153,4 @@ Merema folk gruop Obinitca.jpg|Мерема морамо кужось Seto Kunin
 
 [[Категория:Эрзят| ]]
 [[Категория:Раськеть|Э]]
+[[Категория:Википедиясь:Кочказь лопат]]
