*Empty MediaWiki Message*

--- a/Абажа_лопа.mw
+++ b/Абажа_лопа.mw
@@ -74,3 +74,4 @@ Image:Planta prundul dambovitei.jpg|цецямодо мейле
 [[Категория:Тикшеть|А]]
 [[Категория:Ормадо лезэвть|А]]
 [[Категория:Медярво максыйть|А]]
+[[Категория:Википедиясь:Кочказь лопат]]
